fix: unset overflow hidden on ohter variants

--- a/src/style-banner.scss
+++ b/src/style-banner.scss
@@ -116,8 +116,10 @@ img {
 }
 
 :host([hero]) {
-
   @extend :host([billboard]);
+  .bannerWrapper {
+    overflow: unset;
+  }
 
   .title {
     color: var(--auro-color-brand-midnight-400);
@@ -190,8 +192,10 @@ img {
 }
 
 :host([marquee]) {
-
   @extend :host([hero]);
+  .bannerWrapper {
+    overflow: unset;
+  }
 }
 
 // =-=-=-=-= slim -=-=-=-=-=-=
